# mimic-sepsis-drl

./: .gitignore  LICENSE.md  README.md  README.tr.md  Snakefile  all_project.md  eksik_metrik_grafik.md  eksiklikler.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
configs/splits/: default.yaml
docs/: cql_project_report.md  degerlendirme.md  discussion_notes_offline_rl_pipeline.md  final_project_plan_proposal.md  iql_final_sweep_protocol.md  iql_graphics_catalog.md  phase10_calistirma_sirasi.md  pipeline_rl_positioning.md  proje_onerisi_iql.md  rapor_kontrol_listesi.md  sunucu_calistirma.md
docs/ieee_ai_aroma_elimination_report/: ai_aroma_elimination_ieee_report.aux  ai_aroma_elimination_ieee_report.bbl  ai_aroma_elimination_ieee_report.blg  ai_aroma_elimination_ieee_report.tex
docs/ieee_iql_final_report/: README.md  clinical_iql_defense_presentation.pptx  create_clinical_iql_defense_pptx.py  create_iql_presentation_pptx.py  iql_final_ieee_report.aux  iql_final_ieee_report.bbl  iql_final_ieee_report.blg  (+13 more)
research/: AI AROMA ELIMINATION FOR IEEE PAPER.md  AI Aroma Removal for Clinical AI Paper.md  Clinical RL Reward Shaping Ablation.md  Humanizing RL Research Paper Generation.md  Justifying Fixed Discount Factor in Offline RL.md  Klinik RL Metodolojisi Oluşturma.md  Staged IQL Hyperparameter Sweep Protocol.md
scripts/: audit_iql_presweep.py  build_iql_final_bundle.py  compute_baseline_ope_once.py  evaluate_cql_sweep.py  evaluate_iql_sweep.py  generate_report_figures.py  mock_iql_workflow.py  run_cql_sweep.py  run_iql_sweep.py
(+32 files in other folders)
