[project]
name = "mimic-sepsis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE.md"]
dependencies = [
    "d3rlpy>=2.8.1",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.8",
    "mlflow>=3.10.1",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch==2.6.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
    "snakemake>=9.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mimic_sepsis_rl"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
